--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -26,51 +26,55 @@ block variables
       ]
 
     const checkboxList = [
-      { label: 'Завтрак' }, { label: 'Письменный стол', checked: true },
-      { label: 'Стул для кормления', checked: true }, { label: 'Кроватка', checked: true },
-      { label: 'Телевизор' }, { label: 'Шампунь' }
+      { title: 'Завтрак', name: 'breakfast' },
+      { title: 'Письменный стол', name: 'desk', checked: true },
+      { title: 'Стул для кормления', name: 'food-chair', checked: true },
+      { title: 'Кроватка', name: 'bed', checked: true },
+      { title: 'Телевизор', name: 'tv', },
+      { title: 'Шампунь', name: 'shampoo' }
     ]
 block content
   .search-room
     form.search-room__filter
       .search-room__date-filter
-        +date-dropdown({ label1: 'даты пребывания в отеле', container: 'js-filter-date' })
+        +date-dropdown({ label1: 'даты пребывания в отеле', name1: 'date-filter' })
       .search-room__guest
         +dropdown({
           label: 'гости',
           items: ['взрослые', 'дети', 'младенцы'],
-          container: 'js-guest',
+          type: 'guests',
           buttons: true,
-          holder: 'Сколько гостей'})
+          holder: 'Сколько гостей',
+          name: 'guests-quantity'
+        })
       .search-room__range-slider
         +range-slider({
           label: 'диапазон цены',
-          text: 'Стоимость за сутки пребывания в номере',
-          container: 'js-range-slider'
+          text: 'Стоимость за сутки пребывания в номере'
         })
       .search-room__checkbox
         span.search-room__checkbox-title правила дома
         .search-room__checkbox-wrapper
-          +checkbox('Можно курить')
-          +checkbox('Можно с питомцами')(checked)
-          +checkbox('Можно пригласить гостей (до&nbsp;10&nbsp;человек)')(checked)
+          +checkbox({ title: 'Можно курить', name: 'smoke'})
+          +checkbox({ title: 'Можно с питомцами', name: 'pets' })(checked)
+          +checkbox({ title: 'Можно пригласить гостей (до&nbsp;10&nbsp;человек)', name: 'guests' })(checked)
       .search-room__checkbox
         span.search-room__checkbox-title доступность
         .search-room__checkbox-wrapper
-          +checkbox('Широкий коридор', 'Ширина коридоров в&nbsp;номере не&nbsp;менее 91&nbsp;см.')
-          +checkbox('Помощник для инвалидов', 'На&nbsp;1&nbsp;этаже вас встретит специалист и&nbsp;проводит до&nbsp;номера.')
+          +checkbox({ title: 'Широкий коридор', description: 'Ширина коридоров в&nbsp;номере не&nbsp;менее 91&nbsp;см.', name: 'wide hall'})
+          +checkbox({ title: 'Помощник для инвалидов', description: 'На&nbsp;1&nbsp;этаже вас встретит специалист и&nbsp;проводит до&nbsp;номера.', name: 'helper'})
       .search-room__comfort
         +dropdown({
           label: 'удобства номера',
           items: ['спальни', 'кровати', 'ванные комнаты'],
-          container: 'js-comfort',
-          holder: 'Удобства'
+          type: 'rooms',
+          holder: 'Удобства',
+          name: 'room-comfort'
         })
       .search-room__expandable-checkbox
         +expandable-checkbox-list({
           label: 'дополнительные удобства',
           list: checkboxList,
-          container: 'js-expand-box'
         })
     .search-room__search-results
       h1.search-room__title Номера, которые мы для вас подобрали
