--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -1,5 +1,5 @@
-mixin range-slider({ label, text, container })
-  .range-slider(class=container)
+mixin range-slider({ label, text })
+  .range-slider.js-range-slider
     .range-slider__header
       span.range-slider__label= label
       span.range-slider__value.js-range-slider__value
