change variable to boolean #6

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -16,7 +16,7 @@ mixin footer()
       .footer__wrapper
         .footer__column.footer__column_size_m
           .footer__logo
-            +logo("text")
+            +logo({ text: true })
           p.footer__description
             |Бронирование номеров в лучшем отеле 2019 года
             |по версии ассоциации «Отельные взгляды»
