--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -13,7 +13,7 @@ mixin header(login)
   header.header.js-header
     .header__container
       .header__logo
-        +logo('text')
+        +logo({ text: true })
       nav.header__navigation
         ul.header__navigation-list.js-header__navigation-list
           li.header__navigation-item
